[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Robot/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Robot/Robot.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Robot/spritesheet_n.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.591, 41.8485 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}

[node name="Robot" groups=[
"Fireballers",
] instance=ExtResource( 1 )]
script = ExtResource( 3 )
speed = 75
gravity = 750

[node name="Sprite" parent="." index="0"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
normal_map = ExtResource( 4 )
vframes = 2
hframes = 7
frame = 8

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0.476224, 20.0015 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
anims/Attack = SubResource( 2 )
anims/Fall = SubResource( 3 )
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/Run = SubResource( 7 )

[node name="CastLeft" parent="." index="3"]
position = Vector2( -25.9525, 38.0981 )

[node name="CastRight" parent="." index="4"]
position = Vector2( 26.0959, 39.0506 )

[node name="LineOfFireLeft" type="RayCast2D" parent="." index="5"]
enabled = true
cast_to = Vector2( -300, 0 )
collision_mask = 2

[node name="LineOfFireRight" type="RayCast2D" parent="." index="6"]
enabled = true
cast_to = Vector2( 300, 0 )
collision_mask = 2

[node name="ShotTimer" type="Timer" parent="." index="7"]
wait_time = 3.0

[node name="SpawnLeft" type="Position2D" parent="." index="8"]
position = Vector2( -34.5536, 27.6429 )

[node name="SpawnRight" type="Position2D" parent="." index="9"]
position = Vector2( 32.2501, 26.4911 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
